<resources>
    <string name="app_name">MakeNote</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="log_in_to_continue">Log In To Continue</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_want_to_sign_in">New User! Want To Sign In ?</string>
    <string name="new_user">New User</string>
    <string name="nice_to_see_you_here">Nice To See You Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="want_to_login">Want To Login ?</string>
    <string name="don_t_worry_we_are_here">Don\'t Worry We Are Here</string>
    <string name="enter_your_registered_mail">Enter your registered mail</string>
    <string name="click_here_to_recover">Click Here To Recover</string>
    <string name="go_back_to_login_screen">Go Back To Login Screen</string>
    <string name="enter_your_note_content_here">Enter your note content here</string>
    <string name="enter_your_note_title_here">Enter Your Note Title here</string>
    <string name="this_is_your_developer">This is your Developer</string>
    <string name="code_will_appear_here">code will appear here</string>
    <string name="title_displayed_here">Title Displayed Here</string>
    <string name="note_app">Note App</string>
</resources>