<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerLine3"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="35sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_worry_we_are_here"
        android:textSize="23sp"
        android:textColor="@color/teal">

    </TextView>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerLine3"
        android:id="@+id/forgotPassword"
        android:hint="@string/enter_your_registered_mail"
        android:layout_marginBottom="10dp">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/click_here_to_recover"
        android:id="@+id/passwordRecoverButton"
        android:layout_below="@id/centerLine3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </Button>

    <TextView
        android:id="@+id/goBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/go_back_to_login_screen"
        android:textAlignment="center"
        android:textColor="@color/cyan"
        android:textSize="20sp">

    </TextView>

</RelativeLayout>